--- a/website/index.html
+++ b/website/index.html
@@ -142,7 +142,7 @@
               </span>
               <span id="contact-text" style="display: none;">
                 To avoid misuse by miscreants, the dataset will be provided upon request and background checking.
-                Please contact <a href="mailto:ronghonghuang@mail.ustc.edu.cn">ronghonghuang@mail.ustc.edu.cn</a> and apply for the dataset.
+                Please contact <a href="mailto:xmi@ustc.edu.cn">xmi@ustc.edu.cn</a> and apply for the dataset.
               </span>
             </div>
 
